--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<p-menubar [model]="items">Сирый Савва P33312</p-menubar>
+<p-menubar [model]="items">
+  Сирый Савва P33312
+  <button pButton icon="pi pi-power-off" (click)="logout()"></button>
+</p-menubar>
 <div>
 <router-outlet></router-outlet>
 </div>
