--- a/src/app/mining/mining.component.html
+++ b/src/app/mining/mining.component.html
@@ -21,9 +21,6 @@
         <th pSortableColumn="day" style="width:200px">Name
           <p-sortIcon field="day"></p-sortIcon>
         </th>
-        <th pSortableColumn="name" style="width:200px">WorkerName
-          <p-sortIcon field="name"></p-sortIcon>
-        </th>
         <th pSortableColumn="clan" style="width:200px">Type
           <p-sortIcon field="clan"></p-sortIcon>
         </th>
@@ -56,17 +53,16 @@
         <td>
           <p-tableCheckbox [value]="entities"></p-tableCheckbox>
         </td>
-        <td style="width:100px">{{entities.id}}</td>
+        <td>{{entities.id}}</td>
         <td style="width:100px">{{entities.worker.creature.name}}</td>
-        <td style="width:100px">{{entities.worker.name}}</td>
-        <td style="width:100px">{{entities.worker.type.name}}</td>
+        <td style="width:100px">{{entities.worker.workerType.name}}</td>
         <td style="width:100px">{{entities.place.name}}</td>
         <td style="width:100px">{{entities.place.location.name}}</td>
-        <td style="width:100px">{{entities.order.status}}</td>
-        <td style="width:100px">{{entities.order.weight}}</td>
-        <td style="width:100px">{{entities.order.date | date: 'MM/dd/yyyy'}}</td>
-        <td style="width:100px">{{entities.order.clan.name}}</td>
-        <td style="width:100px">{{entities.order.clan2.name}}</td>
+        <td style="width:100px">{{entities.orderSpice.status}}</td>
+        <td style="width:100px">{{entities.orderSpice.weight}}</td>
+        <td style="width:100px">{{entities.orderSpice.date | date: 'MM/dd/yyyy'}}</td>
+        <td style="width:100px">{{entities.orderSpice.clan.name}}</td>
+        <td style="width:100px">{{entities.orderSpice.clan2.name}}</td>
         <td>
           <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success mr-2"
                   (click)="edit(entities)">
